modal fixy
the hand-made modal was a bit wonky when it contained too much content..
absolute positioning, selectors updated, etc

--- a/css/base.scss
+++ b/css/base.scss
@@ -420,41 +420,43 @@ nav {
     }
   }
 }
-#us_map_wrap {
-  .overlay {
-    position:fixed;
-    top: 0px; right: 0px; bottom: 0px; left: 0px;
-    text-align: center;
-    background: rgba(0,0,0,.7);
-    z-index: 99;
-    display: none;
-    .dialog {
-      width: 55%;
-      padding: 30px;
-      position: absolute;
-      top: 50%; left: 50%;
-      @include transform(translate(-50%,-50%));
-      background: $main-bg-color;
-      color: $main-color;
-      display:none;
-    }
-    .dialog::before {
-      content: "";
-      position: absolute;
-      top: 4px; right: 8px;
-      width: 25px; height: 25px;
-      background: lighten($main-color, 30%);
-    }
-    .closer {
-      font-size:20px;
-      font-weight:bold;
-      position:absolute;
-      top:2px;right:10px; 
-      background:$main-color;
-      color:$main-bg-color;
-      width:25px; height:25px;
-    }
-  }
+
+.overlay {
+  position:fixed;
+  top: 0px; right: 0px; bottom: 0px; left: 0px;
+  text-align: center;
+  background: rgba(0,0,0,.7);
+  z-index: 99;
+  display: none;
+  
+}
+
+.dialog {
+  width: 55%;
+  padding: 30px;
+  position: absolute;
+  top: 10px; left: 50%;
+  z-index: 100;
+  @include transform(translateX(-50%));
+  background: $main-bg-color;
+  color: $main-color;
+  display:none;
+}
+.dialog::before {
+  content: "";
+  position: absolute;
+  top: 4px; right: 8px;
+  width: 25px; height: 25px;
+  background: lighten($main-color, 30%);
+}
+.closer {
+  font-size:20px;
+  font-weight:bold;
+  position:absolute;
+  top:2px;right:10px; 
+  background:$main-color;
+  color:$main-bg-color;
+  width:25px; height:25px;
 }
 
 #contact {
